--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - AdtoLeadz Digital Marketing Agency</title>
+    <title>Digital Marketing Blog - Expert Tips & Insights | AdtoLeadz</title>
     <meta name="description" content="Stay updated with the latest digital marketing trends, tips, and insights from AdtoLeadz. Expert advice on web design, SEO, social media marketing, and more.">
     <meta name="keywords" content="digital marketing blog, SEO tips, social media marketing, web design trends, marketing insights, AdtoLeadz blog">
     
@@ -65,8 +65,8 @@
         <div class="container">
             <div class="row align-items-center min-vh-50">
                 <div class="col-lg-12 text-center">
-                    <h1 class="hero-title" data-aos="fade-up">Digital Marketing Blog</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Expert insights, latest trends, and actionable tips to grow your business</p>
+                    <h1 class="hero-title" data-aos="fade-up">Digital Marketing Blog - Expert Insights & Tips</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Expert insights, latest trends, and actionable tips to grow your business online</p>
                 </div>
             </div>
         </div>
