--- a/web-design.html
+++ b/web-design.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Design Services - AdtoLeadz Digital Marketing Agency</title>
-    <meta name="description" content="Professional web design services including UI/UX design, responsive websites, WordPress development, and e-commerce solutions. Get a free quote today!">
-    <meta name="keywords" content="web design, UI/UX design, responsive websites, WordPress development, e-commerce, custom websites">
+    <title>Creative Web Design Services in Madurai | Custom Websites That Convert | AdtoLeadz</title>
+    <meta name="description" content="Create stunning, responsive websites with our web design team in Madurai. We build custom sites, e-commerce solutions, and WordPress websites that drive conversions and enhance user experience.">
+    <meta name="keywords" content="web design company Madurai, web digital marketing, professional web design services, responsive websites, WordPress development, e-commerce, custom websites, online marketing services">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -65,8 +65,8 @@
         <div class="container">
             <div class="row align-items-center min-vh-50">
                 <div class="col-lg-12 text-center">
-                    <h1 class="hero-title" data-aos="fade-up">Web Design Services</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Create stunning, responsive websites that convert visitors into customers</p>
+                    <h1 class="hero-title" data-aos="fade-up">Creative Web Design Services in Madurai</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Create stunning, responsive websites that convert visitors into customers with our expert web design team.</p>
                 </div>
             </div>
         </div>
@@ -77,8 +77,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
-                    <h2 class="section-title">What We Offer</h2>
-                    <p class="section-subtitle">Comprehensive web design solutions tailored to your business needs</p>
+                    <h2 class="section-title">Our Web Design Solutions</h2>
+                    <p class="section-subtitle">Comprehensive web design solutions tailored to your business needs and designed to drive results</p>
                 </div>
             </div>
             <div class="row">
@@ -329,6 +329,72 @@
                         <div class="portfolio-content">
                             <h5>Portfolio Website</h5>
                             <p>Creative portfolio site showcasing work with stunning visual design.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section class="faq-section py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
+                    <h2 class="section-title">Frequently Asked Questions</h2>
+                    <p class="section-subtitle">Common questions about our web design services in Madurai</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <div class="accordion" id="faqAccordion">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq1">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
+                                    What makes you the best web design company in Madurai?
+                                </button>
+                            </h2>
+                            <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    We are a leading web design company in Madurai with 3+ years of experience. Our team specializes in creating responsive, SEO-friendly websites that convert visitors into customers. We offer comprehensive web design solutions and online marketing services.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq2">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+                                    Do you provide web digital marketing services?
+                                </button>
+                            </h2>
+                            <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Yes! We offer comprehensive digital marketing services including web design, SEO, social media marketing, and PPC management. We're your one-stop solution for all your digital marketing needs in Madurai.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq3">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
+                                    What online marketing services do you offer?
+                                </button>
+                            </h2>
+                            <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    We offer comprehensive online marketing services including web design, SEO, social media marketing, PPC management, content marketing, and Google My Business optimization. We help businesses establish a strong online presence.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq4">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4">
+                                    Do you work with startups and small businesses?
+                                </button>
+                            </h2>
+                            <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Absolutely! We work with businesses of all sizes, from startups to large enterprises. We offer flexible packages and pricing options to suit different budgets and requirements. Our web design services are designed to help businesses grow online.
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
