--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - AdtoLeadz Digital Marketing Agency</title>
-    <meta name="description" content="Learn about AdtoLeadz, a leading digital marketing agency with a passionate team dedicated to helping businesses achieve their online goals through innovative strategies.">
-    <meta name="keywords" content="about us, digital marketing team, company history, mission, vision, values, AdtoLeadz">
+    <title>About AdtoLeadz - Your Trusted Digital Marketing Partner in Madurai</title>
+    <meta name="description" content="Discover AdtoLeadz's story, mission, and the passionate team behind our success. Learn how we've helped businesses in Madurai achieve their digital marketing goals with innovative strategies and proven results.">
+    <meta name="keywords" content="digital marketing services Madurai, about us, digital marketing team, company history, mission, vision, values, AdtoLeadz, marketing agency for startups, online marketing services">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -65,8 +65,8 @@
         <div class="container">
             <div class="row align-items-center min-vh-50">
                 <div class="col-lg-12 text-center">
-                    <h1 class="hero-title" data-aos="fade-up">About Us</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Passionate about digital marketing excellence</p>
+                    <h1 class="hero-title" data-aos="fade-up">About AdtoLeadz - Your Digital Marketing Partner</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Passionate about digital marketing excellence and helping businesses achieve their online goals</p>
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
                         <h3>Who We Are</h3>
                         <p class="section-text">AdtoLeadz was founded with a simple yet powerful vision: to help businesses thrive in the digital age. We are a team of passionate digital marketing experts who believe that every business, regardless of size, deserves access to world-class marketing strategies.</p>
                         <p class="section-text">Our journey began when we realized that many businesses were struggling to navigate the complex digital landscape. We saw an opportunity to bridge the gap between traditional marketing and the digital world, creating solutions that are both innovative and results-driven.</p>
-                        <p class="section-text">Today, we are proud to be one of the leading digital marketing agencies, helping hundreds of businesses achieve their online goals and grow their revenue through strategic digital marketing campaigns.</p>
+                        <p class="section-text">Today, we are proud to be one of the leading digital marketing agencies in Madurai, helping hundreds of businesses achieve their online goals and grow their revenue through strategic digital marketing campaigns.</p>
                     </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
