--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - AdtoLeadz Digital Marketing Agency</title>
-    <meta name="description" content="Get in touch with AdtoLeadz for professional digital marketing services. Contact us for web design, SEO, social media marketing, and more. Free consultation available.">
-    <meta name="keywords" content="contact AdtoLeadz, digital marketing consultation, web design quote, SEO services, social media marketing">
+    <title>Contact AdtoLeadz - Get Your Free Digital Marketing Consultation in Madurai</title>
+    <meta name="description" content="Ready to grow your business? Contact AdtoLeadz in Madurai for a free consultation. Our digital marketing experts are here to help you achieve your online goals. Call or email us today!">
+    <meta name="keywords" content="digital marketing agency contact Madurai, contact AdtoLeadz, digital marketing consultation, web design quote, SEO services, social media marketing, online marketing services">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -65,8 +65,8 @@
         <div class="container">
             <div class="row align-items-center min-vh-50">
                 <div class="col-lg-12 text-center">
-                    <h1 class="hero-title" data-aos="fade-up">Contact Us</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Let's discuss how we can help grow your business</p>
+                    <h1 class="hero-title" data-aos="fade-up">Contact AdtoLeadz - Get Your Free Consultation</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Let's discuss how we can help grow your business with our expert digital marketing services</p>
                 </div>
             </div>
         </div>
@@ -166,7 +166,7 @@
                             </div>
                             <div class="contact-details">
                                 <h5>Address</h5>
-                                <p>123 Business Street<br>Suite 100<br>City, State 12345</p>
+                                <p>Madurai, Tamil Nadu, India<br>Digital Marketing Agency<br>Contact for Services</p>
                             </div>
                         </div>
                         
