--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AdtoLeadz - Digital Marketing Agency | Boost Your Online Presence</title>
-    <meta name="description" content="AdtoLeadz is a leading digital marketing agency specializing in web design, social media marketing, SEO, and SMO services. Boost your online presence with our expert team.">
-    <meta name="keywords" content="digital marketing, web design, social media marketing, SEO, SMO, online presence, marketing agency">
+    <title>AdtoLeadz - Premier Digital Marketing Agency in Madurai | Transform Your Business</title>
+    <meta name="description" content="Transform your business with AdtoLeadz, Madurai's trusted digital marketing partner. We specialize in SEO, social media marketing, and web design to drive growth and increase your online visibility.">
+    <meta name="keywords" content="digital marketing agency Madurai, SEO company Madurai, social media marketing for small business, marketing agency for startups, google SEO price, SEO marketing company near me, web digital marketing, social media agency, best social media marketing, organic social media marketing, B2B social media agency, online marketing services, PPC management services, SEO services in Madurai, content marketing company">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt="AdtoLeadz Logo" height="40">
+                <img src="images/logo.png" alt="Digital Marketing Agency Madurai - AdtoLeadz Logo" height="40">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -65,8 +65,8 @@
         <div class="container">
             <div class="row align-items-center min-vh-100">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <h1 class="hero-title">Kickstart Your Online Presence with Our Digital Marketing Agency</h1>
-                    <p class="hero-subtitle">Transform your business with our comprehensive digital marketing solutions. We help you grow, engage, and convert your audience into loyal customers. AdtoLeadz is providing both courses and services with more than 3+ years of experience in Madurai.</p>
+                    <h1 class="hero-title">Transform Your Business with Expert Digital Marketing in Madurai</h1>
+                    <p class="hero-subtitle">Transform your business with our comprehensive digital marketing solutions. We help you grow, engage, and convert your audience into loyal customers. AdtoLeadz has been providing both courses and services with more than 3+ years of experience in Madurai.</p>
                     <div class="hero-buttons">
                         <a href="contact.html" class="btn btn-primary btn-lg me-3">Get Started</a>
                         <a href="about.html" class="btn btn-outline-light btn-lg">Learn More</a>
@@ -130,8 +130,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
-                    <h2 class="section-title">We Are Specialized in the Following Services</h2>
-                    <p class="section-subtitle">Best Digital Marketing Services in Madurai | AdtoLeadz</p>
+                    <h2 class="section-title">Our Specialized Digital Marketing Services</h2>
+                    <p class="section-subtitle">Comprehensive solutions designed to grow your business and enhance your online presence</p>
                 </div>
             </div>
             <div class="row">
@@ -151,7 +151,7 @@
                             <i class="fas fa-share-alt"></i>
                         </div>
                         <h4>Social Media Marketing</h4>
-                        <p>Boost your brand's presence and engagement with our expert social media marketing strategies.</p>
+                        <p>Boost your brand's presence and engagement with our expert social media marketing strategies designed for businesses of all sizes.</p>
                         <a href="social-media-marketing.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
@@ -160,8 +160,8 @@
                         <div class="service-icon">
                             <i class="fas fa-search"></i>
                         </div>
-                        <h4>SEO</h4>
-                        <p>Increase your website's visibility and attract more organic traffic with our robust SEO services.</p>
+                        <h4>Search Engine Optimization</h4>
+                        <p>Increase your website's visibility and attract more organic traffic with our comprehensive SEO services tailored to your business needs.</p>
                         <a href="seo.html" class="btn btn-outline-primary">Learn More</a>
                     </div>
                 </div>
@@ -349,7 +349,7 @@
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="blog-card">
                         <div class="blog-image">
-                            <img src="https://via.placeholder.com/400x250/2E78C0/FFFFFF?text=SEO+Tips" alt="SEO Tips" class="img-fluid">
+                            <img src="https://via.placeholder.com/400x250/2E78C0/FFFFFF?text=SEO+Tips" alt="SEO Services in Madurai - Digital Marketing Tips" class="img-fluid">
                         </div>
                         <div class="blog-content">
                             <h4>10 Essential SEO Tips for 2024</h4>
@@ -361,7 +361,7 @@
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="blog-card">
                         <div class="blog-image">
-                            <img src="https://via.placeholder.com/400x250/60B0E0/FFFFFF?text=Social+Media" alt="Social Media Marketing" class="img-fluid">
+                            <img src="https://via.placeholder.com/400x250/60B0E0/FFFFFF?text=Social+Media" alt="Social Media Marketing for Small Business - Madurai Agency" class="img-fluid">
                         </div>
                         <div class="blog-content">
                             <h4>Social Media Marketing Trends 2024</h4>
@@ -373,7 +373,7 @@
                 <div class="col-lg-4 col-md-6 mb-4" data-aos="fade-up" data-aos-delay="300">
                     <div class="blog-card">
                         <div class="blog-image">
-                            <img src="https://via.placeholder.com/400x250/1A4A80/FFFFFF?text=Web+Design" alt="Web Design" class="img-fluid">
+                            <img src="https://via.placeholder.com/400x250/1A4A80/FFFFFF?text=Web+Design" alt="Web Design Company Madurai - Digital Marketing Agency" class="img-fluid">
                         </div>
                         <div class="blog-content">
                             <h4>Web Design Best Practices</h4>
@@ -391,13 +391,79 @@
         </div>
     </section>
 
+    <!-- FAQ Section -->
+    <section class="faq-section py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
+                    <h2 class="section-title">Frequently Asked Questions</h2>
+                    <p class="section-subtitle">Common questions about our digital marketing services in Madurai</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <div class="accordion" id="faqAccordion">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq1">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
+                                    How much does SEO cost in Madurai?
+                                </button>
+                            </h2>
+                            <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Our SEO pricing is competitive and tailored to your business needs. We offer packages starting from ₹15,000/month for small businesses. Contact us for a customized quote based on your specific requirements and goals.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq2">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+                                    What makes you the best social media marketing agency in Madurai?
+                                </button>
+                            </h2>
+                            <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    We specialize in social media marketing for businesses of all sizes, including B2B companies. Our team has 3+ years of experience helping businesses in Madurai grow their online presence with proven strategies and measurable results.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq3">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
+                                    Do you provide digital marketing services for startups in India?
+                                </button>
+                            </h2>
+                            <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Yes! We work with startups and offer comprehensive digital marketing services designed to help new businesses establish their online presence cost-effectively. Our packages are tailored to meet the unique needs and budgets of emerging companies.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq4">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4">
+                                    What online marketing services do you offer?
+                                </button>
+                            </h2>
+                            <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    We offer comprehensive online marketing services including SEO, social media marketing, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="footer bg-dark text-light py-5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="footer-brand">
-                        <img src="images/logo.png" alt="AdtoLeadz Logo" height="40" class="mb-3">
+                        <img src="images/logo.png" alt="Digital Marketing Agency Madurai - AdtoLeadz Logo" height="40" class="mb-3">
                         <p>Transforming businesses through innovative digital marketing solutions. We help you grow, engage, and convert your audience into loyal customers.</p>
                     </div>
                 </div>
