--- a/seo.html
+++ b/seo.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SEO Services - AdtoLeadz Digital Marketing Agency</title>
-    <meta name="description" content="Professional SEO services including keyword research, on-page optimization, technical SEO, and link building. Improve your search rankings and drive organic traffic.">
-    <meta name="keywords" content="SEO services, search engine optimization, keyword research, on-page SEO, technical SEO, link building, organic traffic">
+    <title>Professional SEO Services in Madurai | Boost Your Search Rankings | AdtoLeadz</title>
+    <meta name="description" content="Get expert SEO services in Madurai with AdtoLeadz. Our proven strategies help businesses improve search rankings, increase organic traffic, and grow online presence. Free consultation available.">
+    <meta name="keywords" content="SEO company Madurai, affordable SEO company in Madurai for small business, SEO marketing company near me, google SEO price, SEO services in Madurai, content marketing company, online marketing services, PPC management services">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -65,8 +65,8 @@
         <div class="container">
             <div class="row align-items-center min-vh-50">
                 <div class="col-lg-12 text-center">
-                    <h1 class="hero-title" data-aos="fade-up">Search Engine Optimization (SEO)</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Improve your search rankings and drive organic traffic with our proven SEO strategies</p>
+                    <h1 class="hero-title" data-aos="fade-up">Professional SEO Services in Madurai</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Improve your search rankings and drive organic traffic with our proven SEO strategies designed to grow your business online.</p>
                 </div>
             </div>
         </div>
@@ -118,8 +118,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
-                    <h2 class="section-title">Our SEO Services</h2>
-                    <p class="section-subtitle">Comprehensive SEO solutions to boost your search rankings</p>
+                    <h2 class="section-title">Our Comprehensive SEO Solutions</h2>
+                    <p class="section-subtitle">Boost your search rankings with our proven SEO strategies and expert implementation</p>
                 </div>
             </div>
             <div class="row">
@@ -297,6 +297,72 @@
                                 </div>
                                 <h4>Monitoring & Reporting</h4>
                                 <p>We continuously monitor your SEO performance and provide detailed reports on progress and results.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section class="faq-section py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
+                    <h2 class="section-title">Frequently Asked Questions</h2>
+                    <p class="section-subtitle">Common questions about our SEO services in Madurai</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <div class="accordion" id="faqAccordion">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq1">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
+                                    How much does SEO cost in Madurai?
+                                </button>
+                            </h2>
+                            <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Our SEO pricing is competitive and tailored to your business needs. We offer packages starting from ₹15,000/month for small businesses. Contact us for a customized quote based on your specific requirements and goals.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq2">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+                                    What makes you the best SEO company in Madurai?
+                                </button>
+                            </h2>
+                            <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    We are a leading SEO company in Madurai with 3+ years of experience. Our team specializes in providing SEO services for businesses of all sizes, from startups to large enterprises. We offer comprehensive online marketing services including content marketing and PPC management.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq3">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
+                                    Do you provide SEO and digital marketing company for local business?
+                                </button>
+                            </h2>
+                            <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Yes! We are a comprehensive SEO and digital marketing company that helps local businesses in Madurai improve their online presence. We provide targeted SEO strategies, local search optimization, and Google My Business management to help you reach local customers.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq4">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4">
+                                    What online marketing services do you offer besides SEO?
+                                </button>
+                            </h2>
+                            <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Besides SEO services, we offer comprehensive online marketing services including social media marketing, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
+                                </div>
                             </div>
                         </div>
                     </div>
