--- a/smo.html
+++ b/smo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SMO Services - AdtoLeadz Digital Marketing Agency</title>
+    <title>Social Media Optimization (SMO) Services - Maximize Your Social Presence | AdtoLeadz</title>
     <meta name="description" content="Professional Social Media Optimization (SMO) services including profile optimization, audience targeting, and analytics. Maximize your social media engagement and brand awareness.">
     <meta name="keywords" content="SMO services, social media optimization, profile optimization, social media analytics, brand awareness, social media engagement">
     
@@ -65,8 +65,8 @@
         <div class="container">
             <div class="row align-items-center min-vh-50">
                 <div class="col-lg-12 text-center">
-                    <h1 class="hero-title" data-aos="fade-up">Social Media Optimization (SMO)</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Optimize your social media profiles and content to maximize engagement and brand visibility</p>
+                    <h1 class="hero-title" data-aos="fade-up">Social Media Optimization (SMO) Services</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Optimize your social media profiles and content to maximize engagement and brand visibility across all platforms</p>
                 </div>
             </div>
         </div>
