--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Media Marketing - AdtoLeadz Digital Marketing Agency</title>
-    <meta name="description" content="Professional social media marketing services for Facebook, Instagram, LinkedIn, Twitter, and Pinterest. Boost your brand presence and engagement with our expert team.">
-    <meta name="keywords" content="social media marketing, Facebook marketing, Instagram marketing, LinkedIn marketing, Twitter marketing, social media strategy">
+    <title>Expert Social Media Marketing in Madurai | Grow Your Brand Online | AdtoLeadz</title>
+    <meta name="description" content="Elevate your brand with our social media marketing services in Madurai. We create engaging content, manage campaigns, and build communities that drive real business results for your company.">
+    <meta name="keywords" content="social media marketing agency Madurai, social media marketing for small business, best social media marketing, organic social media marketing, B2B social media agency, social media agency, marketing agency for startups, online marketing services">
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -65,8 +65,8 @@
         <div class="container">
             <div class="row align-items-center min-vh-50">
                 <div class="col-lg-12 text-center">
-                    <h1 class="hero-title" data-aos="fade-up">Social Media Marketing</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Build your brand presence and engage with your audience across all major platforms</p>
+                    <h1 class="hero-title" data-aos="fade-up">Expert Social Media Marketing in Madurai</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Build your brand presence and engage with your audience across all major platforms with our proven social media strategies.</p>
                 </div>
             </div>
         </div>
@@ -77,8 +77,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
-                    <h2 class="section-title">How SMM Helps Your Business</h2>
-                    <p class="section-subtitle">Transform your social media presence into a powerful marketing tool</p>
+                    <h2 class="section-title">Transform Your Social Media Presence</h2>
+                    <p class="section-subtitle">Turn your social media presence into a powerful marketing tool that drives real business results</p>
                 </div>
             </div>
             <div class="row align-items-center">
@@ -276,6 +276,72 @@
                                 <div class="result-item">
                                     <span class="result-number">200%</span>
                                     <span class="result-label">ROI Increase</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section class="faq-section py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center mb-5" data-aos="fade-up">
+                    <h2 class="section-title">Frequently Asked Questions</h2>
+                    <p class="section-subtitle">Common questions about our social media marketing services in Madurai</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 mx-auto">
+                    <div class="accordion" id="faqAccordion">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq1">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
+                                    What makes you the best social media marketing agency in Madurai?
+                                </button>
+                            </h2>
+                            <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    We are a leading social media marketing agency in Madurai with 3+ years of experience. Our team specializes in social media marketing for businesses of all sizes, including B2B companies. We provide organic social media marketing and comprehensive online marketing services.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq2">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+                                    Do you provide social media marketing for B2B companies?
+                                </button>
+                            </h2>
+                            <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Yes! We are a specialized agency that helps B2B companies build their online presence through targeted social media marketing strategies. We understand the unique needs of B2B businesses and create content that resonates with professional audiences.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq3">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
+                                    What online marketing services do you offer besides social media?
+                                </button>
+                            </h2>
+                            <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Besides social media marketing, we offer comprehensive online marketing services including SEO, PPC management, content marketing, web design, and Google My Business optimization. We're your one-stop digital marketing agency in Madurai.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="faq4">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4">
+                                    Do you work with marketing agency for startups?
+                                </button>
+                            </h2>
+                            <div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                                <div class="accordion-body">
+                                    Absolutely! We work with startups and offer specialized packages for new businesses. We help startups establish their online presence cost-effectively with social media marketing solutions tailored to their budget and goals.
                                 </div>
                             </div>
                         </div>
