--- a/testimonials.html
+++ b/testimonials.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testimonials - AdtoLeadz Digital Marketing Agency</title>
+    <title>Client Testimonials - Success Stories from AdtoLeadz | Digital Marketing Reviews</title>
     <meta name="description" content="Read what our clients say about AdtoLeadz digital marketing services. Real testimonials from satisfied customers who achieved success with our help.">
     <meta name="keywords" content="client testimonials, customer reviews, digital marketing success stories, AdtoLeadz reviews">
     
@@ -65,8 +65,8 @@
         <div class="container">
             <div class="row align-items-center min-vh-50">
                 <div class="col-lg-12 text-center">
-                    <h1 class="hero-title" data-aos="fade-up">What Our Clients Say</h1>
-                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Real success stories from businesses we've helped grow</p>
+                    <h1 class="hero-title" data-aos="fade-up">Client Testimonials - Success Stories</h1>
+                    <p class="hero-subtitle" data-aos="fade-up" data-aos-delay="200">Real success stories from businesses we've helped grow with our digital marketing services</p>
                 </div>
             </div>
         </div>
